Add mprotect syscall and corresponding BPF filter
The `mprotect` syscall has been added to the `Arch` and `Syscall`
classes. A corresponding BPF filter has been implemented in `BpfFilter`
to correctly handle `mprotect` calls, specifically blocking attempts to
grant executable permissions. This is a critical security measure to
prevent code injection and execution from non-executable memory regions.